--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -99,6 +99,9 @@
     <image.tomcat.upstream>fabric8/tomcat-8:${version.image.tomcat.upstream}</image.tomcat.upstream>
     <image.jetty.upstream>fabric8/jetty-9:${version.image.jetty.upstream}</image.jetty.upstream>
     <image.wildfly.upstream>jboss/wildfly:${version.image.wildfly.upstream}</image.wildfly.upstream>
+
+    <!-- Expected suffix to be appended to product versions -->
+    <redhat.version.suffix>redhat</redhat.version.suffix>
   </properties>
 
   <repositories>
